# buffetalligator

./: .gitmodules  CMakeLists.txt  README.md
cmake/: DetectGPU.cmake  buffet_alligator-config.cmake.in  psyne_buffers-config.cmake.in
cmake/cmake/: DetectGPU.cmake
cswift/: CMakeLists.txt  README.md
cswift/cmake/: cswift-config.cmake.in
cswift/examples/: CMakeLists.txt  distributed_learning.hpp  federated_learning_secure.cpp  gpu_direct_memory.cpp  in_memory_transport.cpp  mps_graph_example.cpp  mps_training_example.cpp  mtl_buffer_example.cpp  network_client.cpp  network_server_example.cpp  neural_engine_inference.cpp  performance_telemetry.cpp  phase2_direct_buffer_example.cpp  phase3_thunderbolt_dma_example.cpp  pipeline_example.cpp  thunderbolt_high_performance.cpp  websocket_ml_serving.cpp  zerocopy_network_example.cpp
cswift/include/cswift/: cswift.hpp  error.h
cswift/include/cswift/detail/: federated.hpp  globals.hpp  high_performance_network.hpp  memory.hpp  metal.hpp  network.hpp  neural.hpp  nio.hpp  params.hpp  server.hpp  telemetry.hpp
cswift/scripts/: extract_compatibility_libs.sh  zero_copy_check.sh
cswift/src/bridge/: error.c
cswift/src/cpp/: cswift.cpp  federated.cpp  high_performance_network.cpp  memory.cpp  metal.cpp  neural.cpp  nio.cpp  server.cpp  telemetry.cpp
cswift/src/swift/: accelerate_framework.swift  advanced_compression.swift  common.swift  comprehensive_neural_engine.swift  coreml_integration.swift  cswift-Bridging-Header.h  gpu_direct_memory.swift  high_performance_networking.swift  mps_gradient.swift  mps_graph.swift  mps_operations.swift  mpsgraph_autodiff.swift  mtl_buffer.swift  network_framework.swift  neural_engine_optimization.swift  performance_telemetry.swift  simple_bytebuffer.swift  simple_network_connection.swift  slab_wrapper.swift  thunderbolt_dma.swift
cswift/tests/: CMakeLists.txt  TEST_PLAN.md  test_allocation_comparison.cpp  test_bytebuffer.cpp  test_bytebuffer_comprehensive.cpp  test_main.cpp  test_phase2_direct_buffer.cpp  test_phase3_thunderbolt_dma.cpp  test_real_usage_benchmark.cpp  test_zerocopy_network.cpp
examples/: 01_basic_buffers.cpp  02_gpu_buffers.cpp  03_network_buffers.cpp  04_chain_buffers.cpp  05_buffer_optimization.cpp  06_swift_interop.cpp  07_error_handling.cpp  08_advanced_buffers.cpp  CMakeLists.txt  README.md
include/: alligator.hpp
include/alligator/buffer/: asio_quic_buffer.hpp  asio_tcp_buffer.hpp  asio_udp_buffer.hpp  buffer.hpp  buffet_alligator.hpp  chain_buffer.hpp  cuda_buffer.hpp  file_backed_buffer.hpp  gpu_buffer.hpp  heap_buffer.hpp  metal_buffer.hpp  nic_buffer.hpp  shared_buffer.hpp  swift_buffer.hpp  swift_quic_buffer.hpp  swift_tcp_buffer.hpp  swift_udp_buffer.hpp  thunderbolt_dma_buffer.hpp  vulkan_buffer.hpp
src/alligator/buffer/: asio_quic_buffer.cpp  asio_tcp_buffer.cpp  asio_udp_buffer.cpp  buffer_pin.cpp  buffet_alligator.cpp  cuda_buffer.cpp  file_backed_buffer.cpp  heap_buffer.cpp  metal_buffer.cpp  shared_buffer.cpp  swift_buffer.cpp  swift_quic_buffer.cpp  swift_tcp_buffer.cpp  swift_udp_buffer.cpp  thunderbolt_dma_buffer.cpp  vulkan_buffer.cpp
